      causing a unhandled exception in the server).

  o Client Changes:
    * When choosing how to match up troves with the same name, conary now
      takes paths into account, if there's a choice to make between matching
      up two old troves that are otherwise equivalent with a new trove, conary
      will choose the one that shares paths with the new trove. (CNY-819)

  o Build Changes:
    * cvc now allows files to be switched from autosource to normal
      and from normal to autosourced. (CNY-946)

  o Bug Fixes:
    * A bug that caused group cook with a replace or remove with a
      flavor and no matching trove to emit a traceback instead of a
      warning has been fixed. (CNY-977)
    * A bug that caused an unhandled exception when two packages with
      the same name require a trove that was being erased has been
      fixed.

Changes in 1.0.35:
  o Bug Fixes:
    * The fix for CNY-926, which allows a ShimNetClient to create
      changes directly from an in-process Conary Repository, did not
      properly merge changesets when multiple servers were involved.
    * The r.setByDefault() method in group recipes was broken in
      1.0.34.  It would cause a traceback.  This has been fixed.

Changes in 1.0.34:
  o Client Changes:
    * You can now delete troves, update from changeset files, and
      update with a full version specified without an installLabelPath
      set. (CNY-281)
    * "conary rm" has been added as an alias for the "conary remove"
      command. (CNY-952)
    * Conary now produces an error message when an invalid context is
      specified. (CNY-890)
    * User settings in a context will override but not remove user
      settings from the main conary configuration file. (CNY-972)

  o Build (cvc) Changes:
    * "cvc cook --prep" now warns about missing dependencies instead
      of raising an error.  "cvc cook --download" does not warn or
      error. (CNY-787)
    * In a group recipe, if you use r.remove() to remove a component